--- a/team_abc/build.gradle
+++ b/team_abc/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    testCompile('junit:junit:4.13.1')
-    testCompile('org.mockito:mockito-core:3.6.0')
+    testImplementation('junit:junit:4.13.1')
+    testImplementation('org.mockito:mockito-core:3.6.0')
 }
