--- a/settings.gradle
+++ b/settings.gradle
@@ -10,5 +10,5 @@ include 'teacher:lesson_3_request_response_input_data_validation:step_2_input_da
 
 
 
-include 'team_oddJobs'
-
+include 'team_abc'
+include 'team_hospital'
