--- a/team_oddJobs/build.gradle
+++ b/team_oddJobs/build.gradle
@@ -9,10 +9,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile('junit:junit:4.13.1')
+    testCompile('org.mockito:mockito-core:3.6.0')
 }
 
-test {
-    useJUnitPlatform()
-}
