--- a/team_jg_entertainment/build.gradle
+++ b/team_jg_entertainment/build.gradle
@@ -11,6 +11,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    testCompile('junit:junit:4.13.1')
+    testCompile('org.mockito:mockito-core:3.6.0')
 }
 
 test {
