--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    compile('org.reflections:reflections:0.9.12')
     testCompile('junit:junit:4.13.1')
     testCompile('org.mockito:mockito-core:3.6.0')
 }
