--- a/team_hospital/build.gradle
+++ b/team_hospital/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testImplementation 'org.junit.platform:junit-platform-runner:1.8.1'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
-
+    compile('org.reflections:reflections:0.9.12')
 	testImplementation('org.mockito:mockito-core:3.6.0')
 	testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
 
