--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     compile('org.reflections:reflections:0.9.12')
+    compile('org.springframework:spring-context:5.2.6.RELEASE')
     testCompile('junit:junit:4.13.1')
     testCompile('org.mockito:mockito-core:3.6.0')
+    testCompile('org.springframework:spring-test:5.2.6.RELEASE')
 }
