--- a/team_hospital/build.gradle
+++ b/team_hospital/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.platform:junit-platform-runner:1.8.1'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
     compile('org.reflections:reflections:0.9.12')
+    compile('org.springframework:spring-context:5.2.6.RELEASE')
+    testCompile('org.springframework:spring-test:5.2.6.RELEASE')
 	testImplementation('org.mockito:mockito-core:3.6.0')
 	testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
 
