qwe finance project - configuration added;

--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-search.ordering.enabled=true
-search.paging.enabled=true
+filter.ordering.enabled=true
+filter.paging.enabled=true
+importData.enabled=true
