qwe finance project - new options for configurator added;

--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 filter.ordering.enabled=true
 filter.paging.enabled=true
 importData.enabled=true
+simulator.marketPrice.enabled=true
+simulator.marketPrice.initDelay=3
+simulator.marketPrice.period=3
+simulator.date.enabled=false
+simulator.date.initDelay=3
+simulator.date.period=3
