qwe finance project - Menu UI refactoring with Strategy;

--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -4,6 +4,6 @@ importData.enabled=true
 simulator.marketPrice.enabled=true
 simulator.marketPrice.initDelay=3
 simulator.marketPrice.period=3
-simulator.date.enabled=false
+simulator.date.enabled=true
 simulator.date.initDelay=3
 simulator.date.period=3
