--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    implementation 'mysql:mysql-connector-java:8.0.26'
     compile('org.reflections:reflections:0.9.12')
     compile('org.springframework:spring-context:5.2.6.RELEASE')
     testCompile('junit:junit:4.13.1')
