--- a/team_oddJobs/build.gradle
+++ b/team_oddJobs/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile('org.reflections:reflections:0.9.12')
     compile('org.springframework:spring-context:5.2.6.RELEASE')
     compile('mysql:mysql-connector-java:8.0.22')
+    compile('mysql:mysql-connector-java:8.0.26')
     compile('org.apache.commons:commons-dbcp2:2.8.0')
     compile('org.springframework:spring-jdbc:5.2.6.RELEASE')
     testCompile('junit:junit:4.13.1')
