--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    implementation 'mysql:mysql-connector-java:8.0.26'
+    compile('mysql:mysql-connector-java:8.0.26')
+    compile('org.apache.commons:commons-dbcp2:2.8.0')
+    compile('org.springframework:spring-jdbc:5.3.11')
     compile('org.reflections:reflections:0.9.12')
     compile('org.springframework:spring-context:5.2.6.RELEASE')
     testCompile('junit:junit:4.13.1')
