--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    implementation 'com.h2database:h2:1.4.200'
     compile('mysql:mysql-connector-java:8.0.26')
     compile('org.apache.commons:commons-dbcp2:2.8.0')
     compile('org.springframework:spring-jdbc:5.3.11')
