--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -8,7 +8,7 @@ simulator.date.enabled=false
 simulator.date.initDelay=3
 simulator.date.period=3
 
-jdbc.url=jdbc:mysql://localhost:3306/qwe
-driverClass=com.mysql.cj.jdbc.Driver
-database.user.name=root
-database.user.password=DG8H-HPAS-9ZGR
+jdbc.url=jdbc:h2:mem:testdb;
+driverClass=org.h2.Driver
+database.user.name=sa
+database.user.password=
