--- a/team_hospital/src/test/resources/application.properties
+++ b/team_hospital/src/test/resources/application.properties
@@ -2,6 +2,11 @@ search.ordering.enabled=true
 search.paging.enabled=true
 
 jdbc.url=jdbc:mysql://localhost:3306/hospital
+driverClass=com.mysql.jdbc.Driver
+database.user.name=root
+database.user.password=JavaGuru21
+
+jdbc.url=jdbc:mysql://localhost:3306/hospital
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
 database.user.password=JavaGuru21
