qwe finance project - mock tests for database improved and updated;

--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 filter.ordering.enabled=true
-filter.paging.enabled=false
+filter.paging.enabled=true
 importData.enabled=false
 simulator.marketPrice.enabled=true
 simulator.marketPrice.initDelay=3
