qwe finance project - market price simulator updated for mySQL database;

--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 filter.ordering.enabled=true
 filter.paging.enabled=true
 importData.enabled=false
-simulator.marketPrice.enabled=true
+simulator.marketPrice.enabled=false
 simulator.marketPrice.initDelay=3
 simulator.marketPrice.period=3
 simulator.date.enabled=false
