--- a/team_jg_entertainment/build.gradle
+++ b/team_jg_entertainment/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
     compile('org.reflections:reflections:0.9.12')
     compile('org.springframework:spring-context:5.2.6.RELEASE')
+    compile('mysql:mysql-connector-java:8.0.22')
+    compile('org.apache.commons:commons-dbcp2:2.8.0')
+    compile('org.springframework:spring-jdbc:5.2.6.RELEASE')
     testCompile('org.springframework:spring-test:5.2.6.RELEASE')
     testImplementation('org.mockito:mockito-core:3.6.0')
     testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
