--- a/team_jg_entertainment/src/main/resources/application.properties
+++ b/team_jg_entertainment/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 search.ordering.enabled=true
 search.paging.enabled=true
+
+jdbc.url=jdbc:mysql://localhost:3306/jg_entertainment
+driverClass=com.mysql.jdbc.Driver
+database.user.name=root
+database.user.password=Mnjob37893789
