qwe finance project - H2 database runscript for tests implemented;

--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -8,7 +8,8 @@ simulator.date.enabled=false
 simulator.date.initDelay=3
 simulator.date.period=3
 
-jdbc.url=jdbc:h2:mem:testdb;
+spring.datasource.initialize=true
+jdbc.url=jdbc:h2:mem:testdb
 driverClass=org.h2.Driver
 database.user.name=sa
 database.user.password=
