--- a/teacher/lesson_11_orm_introduction/build.gradle
+++ b/teacher/lesson_11_orm_introduction/build.gradle
@@ -6,9 +6,10 @@ dependencies {
     compile('org.hibernate:hibernate-core:5.4.25.Final')
     compile('org.springframework:spring-orm:5.2.6.RELEASE')
     compile('org.springframework:spring-tx:5.2.6.RELEASE')
-
     compile('org.springframework:spring-context:5.2.6.RELEASE')
+
     testCompile('junit:junit:4.13.1')
     testCompile('org.mockito:mockito-core:3.6.0')
     testCompile('org.springframework:spring-test:5.2.6.RELEASE')
+    testCompile('com.h2database:h2:1.4.200')
 }
