--- a/teacher/lesson_11_orm_introduction/src/test/resources/application.properties
+++ b/teacher/lesson_11_orm_introduction/src/test/resources/application.properties
@@ -1,12 +1,12 @@
 search.ordering.enabled=true
 search.paging.enabled=true
 
-jdbc.url=jdbc:mysql://localhost:3306/java2
-driverClass=com.mysql.jdbc.Driver
-database.user.name=root
-database.user.password=javaguru
+jdbc.url=jdbc:h2:mem:testdb
+driverClass=org.h2.Driver
+database.user.name=sa
+database.user.password=
 
 hibernate.packagesToScan=lv.javaguru.java2.library.core.domain
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=none
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
