--- a/team_oddJobs/src/main/resources/application.properties
+++ b/team_oddJobs/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 search.ordering.enabled=true
-search.paging.enabled=false
+search.paging.enabled=true
 
 jdbc.url=jdbc:mysql://localhost:3306/oddJobs
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
 database.user.password=admin
+
+hibernate.packagesToScan=lv.javaguru.java2.oddJobs.domain
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=validate
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
