--- a/team_oddJobs/src/test/resources/application.properties
+++ b/team_oddJobs/src/test/resources/application.properties
@@ -1,7 +1,13 @@
 search.ordering.enabled=true
 search.paging.enabled=true
 
-jdbc.url=jdbc:mysql://localhost:3306/oddJobs
-driverClass=com.mysql.cj.jdbc.Driver
-database.user.name=root
-database.user.password=admin
+jdbc.url=jdbc:h2:mem:testdb
+driverClass=org.h2.Driver
+database.user.name=sa
+database.user.password=
+
+hibernate.packagesToScan=lv.javaguru.java2.oddJobs.domain
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
