--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,12 +1,15 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'com.h2database:h2:1.4.200'
+    compile('org.hibernate:hibernate-core:5.6.1.Final')
+    compile('org.springframework:spring-orm:5.3.12')
+    compile('org.springframework:spring-tx:5.3.12')
     compile('mysql:mysql-connector-java:8.0.26')
     compile('org.apache.commons:commons-dbcp2:2.8.0')
-    compile('org.springframework:spring-jdbc:5.3.11')
-    compile('org.reflections:reflections:0.10.1')
-    compile('org.springframework:spring-context:5.3.11')
+    compile('org.springframework:spring-jdbc:5.3.12')
+    compile('org.reflections:reflections:0.10.2')
+    compile('org.springframework:spring-context:5.3.12')
     testCompile('junit:junit:4.13.2')
     testCompile('org.mockito:mockito-core:4.0.0')
-    testCompile('org.springframework:spring-test:5.3.11')
+    testCompile('org.springframework:spring-test:5.3.12')
 }
