--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 filter.ordering.enabled=true
-filter.paging.enabled=true
+filter.paging.enabled=false
 importData.enabled=false
-simulator.marketPrice.enabled=true
+simulator.marketPrice.enabled=false
 simulator.marketPrice.initDelay=5
 simulator.marketPrice.period=5
 simulator.date.enabled=false
@@ -12,3 +12,8 @@ jdbc.url=jdbc:mysql://localhost:3306/qwe
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
 database.user.password=DG8H-HPAS-9ZGR
+
+hibernate.packagesToScan=lv.javaguru.java2.qwe.core.domain
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=validate
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
