--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 filter.ordering.enabled=true
-filter.paging.enabled=true
+filter.paging.enabled=false
 importData.enabled=false
 simulator.marketPrice.enabled=false
 simulator.marketPrice.initDelay=3
@@ -12,3 +12,8 @@ jdbc.url=jdbc:h2:mem:testdb
 driverClass=org.h2.Driver
 database.user.name=sa
 database.user.password=
+
+hibernate.packagesToScan=lv.javaguru.java2.qwe.core.domain
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
