--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -7,6 +7,9 @@ simulator.marketPrice.period=5
 simulator.date.enabled=false
 simulator.date.initDelay=3
 simulator.date.period=3
+realTime.marketPrice.enabled=false
+realTime.marketPrice.initDelay=1
+realTime.marketPrice.period=60
 
 jdbc.url=jdbc:mysql://localhost:3306/qwe
 driverClass=com.mysql.cj.jdbc.Driver
