--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -7,6 +7,9 @@ simulator.marketPrice.period=3
 simulator.date.enabled=false
 simulator.date.initDelay=3
 simulator.date.period=3
+realTime.marketPrice.enabled=false
+realTime.marketPrice.initDelay=1
+realTime.marketPrice.period=60
 
 jdbc.url=jdbc:h2:mem:testdb
 driverClass=org.h2.Driver
