jg-restaurant:test

--- a/team_jg_entertainment/src/test/resources/application.properties
+++ b/team_jg_entertainment/src/test/resources/application.properties
@@ -1,7 +1,17 @@
 search.ordering.enabled=true
 search.paging.enabled=true
 
-jdbc.url=jdbc:mysql://localhost:3306/jg_entertainment
-driverClass=com.mysql.cj.jdbc.Driver
-database.user.name=root
-database.user.password=Mnjob37893789
+#jdbc.url=jdbc:mysql://localhost:3306/jg_entertainment
+#driverClass=com.mysql.cj.jdbc.Driver
+#database.user.name=root
+#database.user.password=Mnjob37893789
+
+jdbc.url=jdbc:h2:mem:testdb
+driverClass=org.h2.Driver
+database.user.name=sa
+database.user.password=
+
+hibernate.packagesToScan=lv.javaguru.java2.jg_entertainment.domain
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
