--- a/team_jg_entertainment/build.gradle
+++ b/team_jg_entertainment/build.gradle
@@ -16,14 +16,12 @@ dependencies {
     compile('org.springframework:spring-context:5.3.12')
     compile('mysql:mysql-connector-java:8.0.25')
     compile('org.apache.commons:commons-dbcp2:2.8.0')
-
+    compile('org.springframework:spring-jdbc:5.2.6.RELEASE')
     compile('org.hibernate:hibernate-core:5.4.25.Final')
     compile('org.springframework:spring-orm:5.2.6.RELEASE')
     compile('org.springframework:spring-tx:5.2.6.RELEASE')
-
-    compile('org.springframework:spring-jdbc:5.2.6.RELEASE')
-
     testCompile('org.springframework:spring-test:5.2.6.RELEASE')
+    testCompile('com.h2database:h2:1.4.200')
     testImplementation('org.mockito:mockito-core:3.6.0')
     testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
 }
