--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 filter.ordering.enabled=true
-filter.paging.enabled=false
+filter.paging.enabled=true
 importData.enabled=false
 simulator.marketPrice.enabled=false
 simulator.marketPrice.initDelay=3
