--- a/team_jg_entertainment/src/main/resources/application.properties
+++ b/team_jg_entertainment/src/main/resources/application.properties
@@ -4,9 +4,9 @@ search.paging.enabled=true
 jdbc.url=jdbc:mysql://localhost:3306/jg_entertainment
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
-database.user.password=Mnjob37893789
+database.user.password=Cleopatr1!
 
-hibernate.packagesToScan=lv.javaguru.java2.jg_entertainment.domain
+hibernate.packagesToScan=lv.javaguru.java2.jg_entertainment.restaurant.domain
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=validate
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
