--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,15 +1,15 @@
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'com.h2database:h2:1.4.200'
-    compile('org.hibernate:hibernate-core:5.6.1.Final')
-    compile('org.springframework:spring-orm:5.3.12')
-    compile('org.springframework:spring-tx:5.3.12')
-    compile('mysql:mysql-connector-java:8.0.26')
-    compile('org.apache.commons:commons-dbcp2:2.8.0')
-    compile('org.springframework:spring-jdbc:5.3.12')
-    compile('org.reflections:reflections:0.10.2')
-    compile('org.springframework:spring-context:5.3.12')
-    testCompile('junit:junit:4.13.2')
-    testCompile('org.mockito:mockito-core:4.0.0')
-    testCompile('org.springframework:spring-test:5.3.12')
+    implementation('org.hibernate:hibernate-core:5.6.1.Final')
+    implementation('org.springframework:spring-orm:5.3.12')
+    implementation('org.springframework:spring-tx:5.3.12')
+    implementation('mysql:mysql-connector-java:8.0.26')
+    implementation('org.apache.commons:commons-dbcp2:2.8.0')
+    implementation('org.springframework:spring-jdbc:5.3.12')
+    implementation('org.reflections:reflections:0.10.2')
+    implementation('org.springframework:spring-context:5.3.12')
+    testImplementation('junit:junit:4.13.2')
+    testImplementation('org.mockito:mockito-core:4.0.0')
+    testImplementation('org.springframework:spring-test:5.3.12')
 }
