--- a/team_hospital/build.gradle
+++ b/team_hospital/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile('org.hibernate:hibernate-core:5.4.25.Final')
     compile('org.springframework:spring-orm:5.2.6.RELEASE')
     compile('org.springframework:spring-tx:5.2.6.RELEASE')
+    testCompile('com.h2database:h2:1.4.200')
     testCompile('org.springframework:spring-test:5.2.6.RELEASE')
 	testImplementation('org.mockito:mockito-core:3.6.0')
 	testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
