--- a/team_hospital/src/test/resources/application.properties
+++ b/team_hospital/src/test/resources/application.properties
@@ -8,5 +8,5 @@ database.user.password=
 
 hibernate.packagesToScan=lv.javaguru.java2.hospital.domain
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
