qwe finance project - json added for responses from yahoo finance api; - can update up to 10 stocks in one request;

--- a/team_qwe/src/main/resources/application.properties
+++ b/team_qwe/src/main/resources/application.properties
@@ -7,6 +7,7 @@ simulator.marketPrice.period=5
 realTime.marketPrice.enabled=false
 realTime.marketPrice.initDelay=1
 realTime.marketPrice.period=60
+realTime.portfolio.enabled=true
 
 jdbc.url=jdbc:mysql://localhost:3306/qwe
 driverClass=com.mysql.cj.jdbc.Driver
