--- a/team_qwe/src/test/resources/application.properties
+++ b/team_qwe/src/test/resources/application.properties
@@ -7,6 +7,7 @@ simulator.marketPrice.period=3
 realTime.marketPrice.enabled=false
 realTime.marketPrice.initDelay=1
 realTime.marketPrice.period=60
+realTime.portfolio.enabled=false
 
 jdbc.url=jdbc:h2:mem:testdb
 driverClass=org.h2.Driver
