--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -10,6 +10,17 @@ dependencies {
     implementation('org.reflections:reflections:0.10.2')
     implementation('org.springframework:spring-context:5.3.13')
     implementation group: 'org.json', name: 'json', version: '20210307'
+
+    compile('org.springframework.boot:spring-boot-starter-web:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+    compile('org.springframework.boot:spring-boot-starter-data-jpa:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+
     testImplementation('junit:junit:4.13.2')
     testImplementation('org.mockito:mockito-core:4.0.0')
     testImplementation('org.springframework:spring-test:5.3.13')
