--- a/team_hospital/build.gradle
+++ b/team_hospital/build.gradle
@@ -9,22 +9,31 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testImplementation 'org.junit.platform:junit-platform-runner:1.8.1'
-    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
     compile('org.reflections:reflections:0.9.12')
-    compile('org.springframework:spring-context:5.2.6.RELEASE')
     compile('mysql:mysql-connector-java:8.0.22')
     compile('org.apache.commons:commons-dbcp2:2.8.0')
-    compile('org.springframework:spring-jdbc:5.2.6.RELEASE')
     compile('org.hibernate:hibernate-core:5.4.25.Final')
-    compile('org.springframework:spring-orm:5.2.6.RELEASE')
-    compile('org.springframework:spring-tx:5.2.6.RELEASE')
+
+    compile('org.springframework.boot:spring-boot-starter-web:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+
+    compile('org.springframework.boot:spring-boot-starter-data-jpa:2.4.1') {
+        exclude (group: 'ch.qos.logback', module: 'logback-classic')
+    }
+
+    testCompile('junit:junit:4.13.1')
     testCompile('com.h2database:h2:1.4.200')
     testCompile('org.springframework:spring-test:5.2.6.RELEASE')
 	testImplementation('org.mockito:mockito-core:3.6.0')
 	testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation 'org.junit.platform:junit-platform-runner:1.8.1'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
 }
 
 test {
