jg-restaurant:SpringBoot

--- a/team_jg_entertainment/src/test/resources/application.properties
+++ b/team_jg_entertainment/src/test/resources/application.properties
@@ -10,3 +10,7 @@ hibernate.packagesToScan=lv.javaguru.java2.jg_entertainment.restaurant.domain
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=none
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#jdbc.url=jdbc:h2:mem:restaurantDB
+#hibernate.hbm2ddl.auto=create
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
