search on web updates

--- a/team_oddJobs/src/main/resources/application.properties
+++ b/team_oddJobs/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-search.ordering.enabled=true
-search.paging.enabled=true
+search.ordering.enabled=false
+search.paging.enabled=false
 
 jdbc.url=jdbc:mysql://localhost:3306/oddJobs
 driverClass=com.mysql.cj.jdbc.Driver
