--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    implementation 'com.h2database:h2:1.4.200'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    implementation 'com.h2database:h2:2.0.202'
     implementation('org.hibernate:hibernate-core:5.6.1.Final')
     implementation('org.springframework:spring-orm:5.3.13')
     implementation('org.springframework:spring-tx:5.3.13')
@@ -10,18 +10,19 @@ dependencies {
     implementation('org.reflections:reflections:0.10.2')
     implementation('org.springframework:spring-context:5.3.13')
     implementation group: 'org.json', name: 'json', version: '20210307'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
-    compile('org.springframework.boot:spring-boot-starter-web:2.5.6') {
+    compile('org.springframework.boot:spring-boot-starter-web:2.6.1') {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
     }
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.5.6') {
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf:2.6.1') {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
     }
-    compile('org.springframework.boot:spring-boot-starter-data-jpa:2.5.6') {
+    compile('org.springframework.boot:spring-boot-starter-data-jpa:2.6.1') {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
     }
 
     testImplementation('junit:junit:4.13.2')
-    testImplementation('org.mockito:mockito-core:4.0.0')
+    testImplementation('org.mockito:mockito-core:4.1.0')
     testImplementation('org.springframework:spring-test:5.3.13')
 }
