--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation('org.reflections:reflections:0.10.2')
     implementation('org.springframework:spring-context:5.3.13')
     implementation group: 'org.json', name: 'json', version: '20210307'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     compile('org.springframework.boot:spring-boot-starter-web:2.6.1') {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
