--- a/team_qwe/build.gradle
+++ b/team_qwe/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+    implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.1'
+    implementation 'javax.cache:cache-api:1.1.1'
+    implementation 'net.sf.ehcache:ehcache:2.10.9.2'
+
     compile('org.springframework.boot:spring-boot-starter-web:2.6.1') {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
     }
