--- a/team_hospital/build.gradle
+++ b/team_hospital/build.gradle
@@ -26,6 +26,7 @@ dependencies {
         exclude (group: 'ch.qos.logback', module: 'logback-classic')
     }
 
+    implementation 'org.liquibase:liquibase-core:4.6.2'
     compile('org.slf4j:slf4j-api:1.7.32')
     compile('org.slf4j:slf4j-log4j12:1.7.32')
 
